// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EServiceGeneralInfoSection > should match the snapshot (admin) 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
          >
            title
          </h2>
        </div>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiStack-root css-1sazv7p-MuiStack-root"
        >
          <div
            class="MuiStack-root css-1xcvc1q-MuiStack-root"
          >
            <div
              class="MuiBox-root css-iuqs4u"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
              >
                agreementField.label
              </p>
            </div>
            <div
              class="MuiBox-root css-1rr4qq7"
            >
              <div
                class="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
              >
                <span
                  class="MuiBox-root css-13o7eu2"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
                    href="/it/fruizione/richieste/agreement-id/modifica"
                    target="_blank"
                  >
                    agreementField.link.label
                  </a>
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiStack-root css-1xcvc1q-MuiStack-root"
          >
            <div
              class="MuiBox-root css-iuqs4u"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
              >
                technology
              </p>
            </div>
            <div
              class="MuiBox-root css-1rr4qq7"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
              >
                <span
                  class="MuiBox-root css-13o7eu2"
                >
                  REST
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`EServiceGeneralInfoSection > should match the snapshot (not admin) 1`] = `
<body>
  <div>
    <section
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
          >
            title
          </h2>
        </div>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiStack-root css-1sazv7p-MuiStack-root"
        >
          <div
            class="MuiStack-root css-1xcvc1q-MuiStack-root"
          >
            <div
              class="MuiBox-root css-iuqs4u"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
              >
                agreementField.label
              </p>
            </div>
            <div
              class="MuiBox-root css-1rr4qq7"
            >
              <div
                class="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
              >
                <span
                  class="MuiBox-root css-13o7eu2"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
                    href="/it/fruizione/richieste/agreement-id"
                    target="_blank"
                  >
                    agreementField.link.label
                  </a>
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiStack-root css-1xcvc1q-MuiStack-root"
          >
            <div
              class="MuiBox-root css-iuqs4u"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
              >
                technology
              </p>
            </div>
            <div
              class="MuiBox-root css-1rr4qq7"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 css-1vn33h7-MuiTypography-root"
              >
                <span
                  class="MuiBox-root css-13o7eu2"
                >
                  REST
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
